--- a/CSC 222 Basic Shapes Project.vcxproj.filters
+++ b/CSC 222 Basic Shapes Project.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Rectangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test-client.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
