--- a/CSC 222 Basic Shapes Project.vcxproj
+++ b/CSC 222 Basic Shapes Project.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="test-client.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
